erDiagram
    Country {
        int id PK
        string name UK
    }

    State {
        int id PK
        string name 
        string code UK
        int country_code FK
    }

    District {
        int id PK
        string name
        string code UK
        int state_code FK
    }

    Institution {
        int id PK
        string name
        string short_name
        string aicte_code UK
        string eamcet_code
        string l4g_code UK
        string l4g_group_code UK
        string type
        string address
        string website
        string latlong
        int district_code FK
    }

    Degree {
        int id PK
        string name UK
        string short_name UK
    }

    Branch {
        int id PK
        string name
        string short_name
        int degree_code FK
    }

    Department {
        int id PK
        string name UK
        string type
    }

    Designation {
        int id PK
        string name UK
        string type
        int priority
    }

    Knowledge_Partner {
        int id PK
        string name UK
        string address
        string website
        string info
    }

    Course {
        int id PK
        string name
        string info
        int knowledge_partner_code FK
    }

    Module {
        int id PK
        string name
        string info
        int module_sequence_number
        string theory_practical
        int duration_minutes
        int course_code FK
    }

    Specialization {
        int id PK
        string name
        string info
        int knowledge_partner_code FK
    }

    Specialization_Course {
        int id PK
        int course_sequence_number
        int course_code FK
        int specialization_code FK
    }

    Program {
        int id PK
        string name
        string info
        int knowledge_partner_code FK
    }

    Program_Specialization {
        int id PK
        int program_code FK
        int specialization_code FK
    }

    Program_Requirement {
        int id PK
        string name
        bool is_mandatory
        int program_code FK
    }

    Learner {
        int id PK
        string name
        string email UK
        string mobile
        string gender
        date date_of_birth
        int aadhaar_number
    }

    Learner_Education {
        int id PK
        string rollno
        int year_of_joining
        int year_of_graduation
        int learner_code FK
        int institution_code FK
        int branch_code FK
    }

    Learner_Employment {
        int id PK
        string empid
        int year_of_joining
        int learner_code FK
        int institution_code FK
        int department_code FK
        int designation_code FK
    }

    Learner_Program_Requirement {
        int id PK
        int learner_code FK
        int program_requirement_code FK
        string value
    }

    Country ||--o{ State : has
    State ||--o{ District : has
    District ||--o{ Institution : located_in
    
    Degree ||--o{ Branch : has
    
    Knowledge_Partner ||--o{ Course : provides
    Knowledge_Partner ||--o{ Specialization : offers
    Knowledge_Partner ||--o{ Program : manages
    
    Course ||--o{ Module : contains
    Course ||--o{ Specialization_Course : included_in
    Specialization ||--o{ Specialization_Course : consists_of
    
    Specialization ||--o{ Program_Specialization : part_of
    Program ||--o{ Program_Specialization : includes
    
    Program ||--o{ Program_Requirement : defines
    
    Learner ||--o{ Learner_Education : has
    Learner ||--o{ Learner_Employment : has
    Learner ||--o{ Learner_Program_Requirement : fulfills
    
    Institution ||--o{ Learner_Education : enrolls
    Institution ||--o{ Learner_Employment : employs
    
    Branch ||--o{ Learner_Education : studies
    
    Department ||--o{ Learner_Employment : works_in
    Designation ||--o{ Learner_Employment : holds
    
    Program_Requirement ||--o{ Learner_Program_Requirement : required_for